apps/app/styles/global.scss
/* raleway-200 - latin */
@font-face {
  font-family: 'Raleway';
  font-style: normal;
  font-weight: 200;
  font-display: swap;
  src: local(''),
       url('/assets/fonts/raleway-v26-latin-200.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('/assets/fonts/raleway-v26-latin-200.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

@font-face {
  font-family: 'Material Icons';
  font-style: normal;
  font-weight: 400;
  src: local(''),
    url('/assets/fonts/MaterialIcons-Regular.woff2') format('woff2'),
    url('/assets/fonts/MaterialIcons-Regular.woff') format('woff');
}

:root {
  --primary: #000000;
}

html, body, #__next {
  height: 100%;
  width: 100%;
}

a {
  text-decoration: none;
  color: var(--joy-palette-text-tertiary);

  &:hover {
    color: var(--joy-palette-text-secondary);
  }
}

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;  /* Preferred icon size */
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;

  /* Support for all WebKit browsers. */
  -webkit-font-smoothing: antialiased;
  /* Support for Safari and Chrome. */
  text-rendering: optimizeLegibility;

  /* Support for Firefox. */
  -moz-osx-font-smoothing: grayscale;

  /* Support for IE. */
  font-feature-settings: 'liga';
}

:root {
  --toastify-font-family: var(--joy-fontFamily-body);
}

[data-joy-color-scheme="dark"] {
  --toastify-color-progress-dark: #fff;

  .image--light {
    display: none;
  }
}

[data-joy-color-scheme="light"] {
  --toastify-color-dark: #fff;
  --toastify-color-progress-dark: #000;
  --toastify-text-color-dark: #333;

  .image--dark {
    display: none;
  }
}

